<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_nmitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="21dp"
        android:text="@string/st_nmitem" />


    <EditText
        android:id="@+id/edt_nmitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_nmitem"
        android:ems="10"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txt_infadic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/st_infadic" />

    <EditText
        android:id="@+id/edt_infadic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_infadic"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_qtdeitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/st_qtde" />

            <EditText
                android:id="@+id/edt_qtdeitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_vritem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_valor" />

            <EditText
                android:id="@+id/edt_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_ultvalor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/st_ultvalor" />

            <EditText
                android:id="@+id/edt_ultvalor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_ultqtde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_ultqtde" />

            <EditText
                android:id="@+id/edt_ultqtde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_go_item"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btnvoltar"
            android:layout_toLeftOf="@+id/btn_proximo"
            android:layout_toStartOf="@+id/btn_proximo"
            android:onClick="GravaItem"
            android:text="@string/st_gravar" />

        <Button
            android:id="@+id/btn_proximo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_go_item"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:layout_toEndOf="@+id/edt_ultvalor"
            android:layout_toRightOf="@+id/edt_ultvalor"
            android:onClick="novo_item"
            android:text="@string/st_proximo" />

    </LinearLayout>


</LinearLayout>
