<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:ignore="HardcodedText,ContentDescription">

    <TextView
        android:id="@+id/txt_tipocompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/st_tipocompra" />

    <Spinner
        android:id="@+id/spTipoCompra"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_tipocompra" />

    <TextView
        android:id="@+id/txt_datacompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spTipoCompra"
        android:layout_marginTop="20dp"
        android:text="@string/st_dtcompra" />

    <TextView
        android:id="@+id/txt_nomecompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_dtatual"
        android:layout_marginTop="20dp"
        android:text="@string/st_nomecompra" />

    <EditText
        android:id="@+id/edt_nomecopra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_nomecompra"
        android:ems="10"
        android:inputType="textAutoCorrect">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txt_precomax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edt_nomecopra"
        android:layout_marginTop="20dp"
        android:text="@string/st_precomax" />

    <EditText
        android:id="@+id/edt_precomax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/txt_precomax"
        android:layout_below="@+id/txt_precomax"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_go_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="57dp"
        android:layout_marginRight="30dp"
        android:text="@string/st_proximo" />

    <TextView
        android:id="@+id/txt_dtatual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_img_data"
        android:layout_alignParentLeft="true"
        android:text="TextView" />

    <ImageButton
        android:id="@+id/btn_img_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_nomecompra"
        android:layout_below="@+id/txt_datacompra"
        android:onClick="abre_calendario"
        android:src="@android:drawable/arrow_down_float" />

    <EditText
        android:id="@+id/edt_DataCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_datacompra"
        android:layout_toEndOf="@+id/btn_img_data"
        android:layout_toRightOf="@+id/btn_img_data"
        android:ems="10"
        android:inputType="date" />

</RelativeLayout>